Se agregan cambio para el punto A 2