@@ -1,51 +1,73 @@
 package com.tvmaze.apiexample.service;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import com.tvmaze.apiexample.client.TvMazeClient;
-import com.tvmaze.apiexample.entity.Comment;
+import com.tvmaze.apiexample.entity.CommentDocument;
 import com.tvmaze.apiexample.entity.Show;
-import com.tvmaze.apiexample.model.TvMazeSearchResponse;
-import com.tvmaze.apiexample.model.TvMazeShow;
+import com.tvmaze.apiexample.mapper.ShowMapper;
+import com.tvmaze.apiexample.model.CommentDto;
+import com.tvmaze.apiexample.model.CommentRequestDto;
+import com.tvmaze.apiexample.model.TvMazeSearchItem;
+import com.tvmaze.apiexample.model.TvMazeShowRaw;
+import com.tvmaze.apiexample.model.TvMazeShowResponse;
+import com.tvmaze.apiexample.repository.CommentRepository;
 
 @Service 
 public class UserService {
 
     private final TvMazeClient tvMazeClient;
     private final DbService dbService;
+    private final CommentRepository commentRepository;
 
-     public UserService(DbService dbService,TvMazeClient tvMazeClient) {
+     public UserService(DbService dbService,TvMazeClient tvMazeClient,CommentRepository commentRepository) {
         this.dbService = dbService;
         this.tvMazeClient = tvMazeClient;
+        this.commentRepository = commentRepository;
     }
 
-     @SuppressWarnings("null")
-    public List<TvMazeShow> getShows(String query) {
-        return tvMazeClient.getShows(query)
-        .stream()
-        .map(TvMazeSearchResponse::show)
-        .toList();
+    public List<TvMazeShowResponse> getShows(String query) {
+
+        List<TvMazeSearchItem> items = tvMazeClient.getShows(query);
+
+        List<Long> showIds = items.stream()
+        .map(item -> item.getShow().getId())
+        .collect(Collectors.toList());
+
+        Map<Long, List<CommentDto>> commentsByShowId = commentRepository.findByShowIdIn(showIds)
+                .stream()
+                .collect(Collectors.groupingBy(
+                        CommentDocument::getShowId,
+                        Collectors.mapping(ShowMapper::toCommentDto, Collectors.toList())
+                ));
+
+         return items.stream()
+                .map(item -> {TvMazeShowRaw raw = item.getShow();
+
+                    List<CommentDto> comments = commentsByShowId.getOrDefault(raw.getId(), Collections.emptyList());
+                    return ShowMapper.toSummaryDto(raw, comments);
+                })
+                .collect(Collectors.toList());
     }
 
     public Show getShowById(Long show_id) {
 
         Show response = dbService.getShowById(show_id.toString());
         if (response == null) {
-           response = tvMazeClient.getById(show_id.longValue());
+           response = tvMazeClient.getById2(show_id.longValue());
            dbService.createMovie(response);
         }
 
         return response;
     }
 
-    public Comment createComment(Comment comment){
+    public void createComment(Long showId, CommentRequestDto request){
 
-        return dbService.createComment(comment);
-
+        dbService.createComment(showId,request);
     }
-
 }
